Fix message scrolling overflow

--- a/flack/static/scss/base.scss
+++ b/flack/static/scss/base.scss
@@ -66,4 +66,5 @@ body {
 
 .content {
   background-color: white;
+  overflow-y: scroll;
 }
