--- a/flack/static/scss/channel.scss
+++ b/flack/static/scss/channel.scss
@@ -14,6 +14,10 @@
   flex: 1;
 }
 
+.channel-footer {
+  border-top: 1px solid $gray-300;
+}
+
 .author {
   font-weight: bold;
 }
